  04 Nov 2016; Agostino Sarubbo <ago@gentoo.org> metadata.xml:
  update metadata.xml