@@ -1,5 +1,5 @@
 AUX Makefile.patch 606 SHA256 2ac55e1a638028f8a05247c4d52d0dcf1e2d0ea01e251ef51e01706bf261514d SHA512 7aef63a7204e97a16f1b1595508ac7c6bd65ffba9e315b2b16ea5e0ea4cc3c8eca6b9647c2dad33cf29c37e8b095d9189445a61d5d0910b5a0fad32c8a731b40 WHIRLPOOL 3a944fa0b179f90c2158fa51c47fbf697cb8ecd62e10b41c8fe914599ee1b69bb1d7347469ca1a398f2d924e022285b174f2b7982bb38d90313df99fb9723506
 DIST uvccapture-0.5.tar.bz2 15467 SHA256 b7c262d2428f23a4c64feddd2c37c43fb39ce4c92a5a6ae0dddf28e3adc5b60e SHA512 130226315c92599efe6186026c54706fb5ccc8e9b10eab02198cd379895249bdfd83963305a36cae6a796890fdff7ed32bac32e44b1f1debdb605d8a27f29238 WHIRLPOOL d402cd907ac1e7f666b08fe3e203d422424638b22062b1ba94d7f8ddaacf59488da335efda71d048e0f67a4f2e547e237cabdf296f88d1be2e60db91c998af35
-EBUILD uvccapture-0.5.ebuild 637 SHA256 094ed5fd129b941cf43c6f47d73073d75db28e6f2d40931f2bc3571852b84074 SHA512 968594b24db6e5f9a95d064af3af822229160ef387c3c3b0e95c19adef4bd2b597b8f6de69755b6686200c5f9afea74cda9725b2055c88e6da437a7388687d0e WHIRLPOOL f872f55a028d6b4874dcc3d11e1bb437c4294167db4b6f7298773a78aab760d52a305aa839cb15c329897963b4c1d02b273e45c7834099f5d067946b4151b95b
-MISC ChangeLog 85 SHA256 99df706563ee9ee356ddcc57aafc88375cd64cf5986573c5a39efd3eaf69b43a SHA512 fa1dcfa72fc7db94ca578cbf04368afc1bde9e0834a788e190a0307716bc3f5457245803f23cfc592eb606b18b2c2c0ce8133d9e068ee9747b72edc2e8ec4d93 WHIRLPOOL 42dcc85ba81ff447f2dbbdf15db2ad0a003c9def1c807cfe5c015df165341908b6f601d30e067d8adcb69d0cf811b38230f68878fb54908327304c0b495d680d
-MISC metadata.xml 247 SHA256 a07573e5b57603eb46018cd4acbb2fd7188d11f32c4da7b57cca2a017e3a82a8 SHA512 c65adc4867e625368b91701012ddfd7d1fb70b42a799cd18c6acbe6d2daae4d2fd94f554b865f82efefb8df9f7c3c52d4604df67cebf595c44d9c01567cdddac WHIRLPOOL 6bb40ec461701db4091d797f1cdab89b3805d6d9dbcec9ac6434bbcfa632b60efa965c05c4aaa374843907467b7a38f138051e7ec28a1a94c8ba03298a3ad392
+EBUILD uvccapture-0.5.ebuild 628 SHA256 8461ab984b087c250dc6381c4f790ed865be1842e59caa9f2ec4c824c5e88927 SHA512 d5d36f1a839a6b3cb7e42c955235a566aef6b4cb1d188111596ae0e58108c1b23ebf678f4f767c60b430b321b8b8b02abc2eb4abc3885228993e3b18c80df977 WHIRLPOOL 0ea970308bbf72ea224fbc69e4293260d1c35923145d128b23ce18cc0f4a24e5d8b558b596b893cbd88e0a1b70cc6c7fae78a439a705fa45c813c12d394ee4a0
+MISC ChangeLog 210 SHA256 c7eafba9e283812761c8d11319e3ef09f5165e89c33439a98e1d0896cf326278 SHA512 2214692beb81becbd13e89cb6a629f2603419db8050e874b96171a27991eb9b4da9f69c14e58b6f783f7a26bfa8e80a55dbfcc457d4ca0e155709460734ee7ee WHIRLPOOL e571407381d09fb78df63b7e4cf309a260ac51e4e120e5db4a5fc3cde5b8308d5fdc59c7bb58ef5418b87862adf1f629baef288faa20d95f33fdb760fb636912
+MISC metadata.xml 252 SHA256 0df10ba8b53ce829ea0fdf3b8f808ae371f24235ab02a7f94967fe0c2d7845bf SHA512 1f9486ce3b84ae866622da9d6e26a3e873467fe1607826fca6b0cc2f6091b0c8f94c4cff6717c57419867ac74bd371c0ef8f035ffb1ffcb1c4cbfae86f544ab5 WHIRLPOOL f993df191d6ce02786a5a2234510fbae80c9e1e1661c2a89cfe71be92cf5668fda737e28faedb21765de32526df074b3ef4eef6f5110020aa8232b1cb85aa7dc
