@@ -1,2 +1,6 @@
+  26 Feb 2020; Agostino Sarubbo <ago@gentoo.org> metadata.xml,
+  uvccapture-0.5.ebuild:
+  media-video/uvccapture: EAPI bump
+
   04 Nov 2016; Agostino Sarubbo <ago@gentoo.org> metadata.xml:
   update metadata.xml
